:lipstick: Fix text cutting off

--- a/css/followList.css
+++ b/css/followList.css
@@ -94,7 +94,6 @@ body, html {
   display: block;
   width: calc(100vw - 150px);
   max-width: 240px;
-  padding-bottom: 7px;
   font-size: 14px;
   font-weight: 500;
 }
@@ -103,6 +102,7 @@ body, html {
   display: block;
   width: calc(100vw - 150px);
   max-width: 240px;
+  padding-top: 7px;
   font-size: 12px;
   color: #767676;
 }
